components/syncthing/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
