components/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  type: ClusterIP
  selector:
    app: syncthing
  ports:
    - name: web
      port: 8384
      targetPort: web
      protocol: TCP
    - name: sync-tcp
      port: 22000
      targetPort: sync-tcp
      protocol: TCP
    - name: sync-udp
      port: 22000
      targetPort: sync-udp
      protocol: UDP
    - name: discovery
      port: 21027
      targetPort: discovery
      protocol: UDP
