components/syncthing/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  labels:
    exposure: tailnet
  annotations:
    lbipam.cilium.io/ips: 10.250.0.11
spec:
  type: LoadBalancer
  selector:
    app: syncthing
  ports:
    - name: web
      port: 8384
      nodePort: 30000
      targetPort: web
      protocol: TCP
    - name: sync-tcp
      port: 22000
      nodePort: 30001
      targetPort: sync-tcp
      protocol: TCP
    - name: sync-udp
      port: 22000
      nodePort: 30002
      targetPort: sync-udp
      protocol: UDP
    - name: discovery
      port: 21027
      nodePort: 30003
      targetPort: discovery
      protocol: UDP
