components/syncthing/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: syncthing-network-policy
spec:
  endpointSelector:
    matchLabels:
      app: syncthing
  ingress:
    - fromCIDR:
        - 192.168.0.0/24
      toPorts:
        - ports:
            - port: "8384"
              protocol: TCP
    - fromCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "22000"
              protocol: TCP
            - port: "22000"
              protocol: UDP
    - fromCIDR:
        - 192.168.0.0/24
      toPorts:
        - ports:
            - port: "21027"
              protocol: UDP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "22000"
              protocol: TCP
            - port: "22000"
              protocol: UDP
    - toCIDR:
        - 192.168.0.0/24
      toPorts:
        - ports:
            - port: "21027"
              protocol: UDP
